# duitku

./: .gitignore  Dockerfile  LICENSE  README.md  go.mod  pyproject.toml
.github/workflows/: build.yaml  release.yaml
cmd/duitku/: main.go  parseimport.go  prune.go  serve.go  sweep.go
configs/: accounts.yaml.example  passwords.toml.example
internal/webhook/: body.go  server.go  server_test.go
src/duitku/: __init__.py  __main__.py  cli.py  models.py  normalise.py  pdfutil.py  sweep.py  webhook.py
src/duitku/emitters/: __init__.py  firefly.py
src/duitku/parsers/: __init__.py  common.py  maybank.py  ryt.py  uob.py
tests/: test_firefly.py  test_normalise.py  test_parsers.py  test_webhook.py
worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts
